[package]
name = "yedin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.3.0"
dialoguer = "0.10.3"
rayon = "1.6.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
spinners = "4.1.0"